2004-11-13  Paolo Borelli  <pborelli@katamail.com>

	* gedit-prefs-manager.h: typo.
	* gedit-prefs-manager-app.c: lsiten to max-recents changes in
	gconf.

2004-11-11  Paolo Borelli  <pborelli@katamail.com>

	* gedit-file.c: use the new gtk api instead of eel_alert_dialog.
	* gedit-file-selector-utils.c: ditto.

2004-11-11  Paolo Borelli  <pborelli@katamail.com>

	* gedit-file.c: open children for new files in the proper order.

2004-11-11  Paolo Borelli  <pborelli@katamail.com>

	* gedit-commands.c: use gtk_text_buffer_select_range for select all.
	* gedit-print.c: use gtk_text_buffer api to get the selection.

2004-11-11  Paolo Borelli  <pborelli@katamail.com>

	* gedit-commands.c: port to the new GtkAboutDialog.
	* dialogs/gedit-plugin-manager.c: ditto.

2004-11-10  Paolo Maggi  <paolo@gnome.org>

	* gedit-file.c (unref_real) (unref_not_opened_children)
	(open_files): unref the non opened children in an idle handler (fixes 
	bug #156992: Crash loading remote file).

	* gedit-mdi.c (gedit_mdi_set_active_window_verbs_sensitivity):
	added a couple of FIXME comments.

2004-11-09  Paolo Maggi  <paolo@gnome.org>

	* gedit-utils.[ch] (gedit_utils_replace_home_dir_with_tilde): new function

	* gedit-mdi-child.c (gedit_mdi_child_real_state_changed):
	uses "*doc" instead of "doc*" for changed documents. Does not use
	"RO" for read only documents.
	(menu_show) (create_popup_menu): fixes a problem with the sensitivity
	of the "Save" menu item.
	(set_tooltip): call gedit_utils_replace_home_dir_with_tilde on the displayed URI.

	* gedit-mdi.c (get_dirname) (gedit_mdi_set_active_window_title): Uses 
	"filename (dirname) - gedit" as window title. Fixes bug #152803 and bug #149553.

2004-11-09  Paolo Maggi  <paolo@gnome.org>

	* gedit/dialogs/gedit-page-setup-dialog.c (restore_button_clicked)
	(body_font_button_font_set) (headers_font_button_font_set)
	(numbers_font_button_font_set) (font_button_new) (setup_font_page):