@@ -1,7 +1,13 @@
+2004-11-13  Paolo Maggi  <paolo@gnome.org>
+
+	* gedit-encodings.c (gedit_encoding_get_from_charset)
+	(gedit_encoding_get_name): fixed bug #156422 (bug and critical warnings
+	when adding an encoding). Patch by Loïc Minier <lool+gnome@via.ecp.fr> 
+
 2004-11-13  Paolo Borelli  <pborelli@katamail.com>
 
 	* gedit-prefs-manager.h: typo.
-	* gedit-prefs-manager-app.c: lsiten to max-recents changes in
+	* gedit-prefs-manager-app.c: listen to max-recents changes in
 	gconf.
 
 2004-11-11  Paolo Borelli  <pborelli@katamail.com>
